creusot/tests/should_fail/prusti/calls/send_back.stderr
error[creusot]: expected `'now` to outlive `'x`
                required by home signature of function
 --> send_back.rs:6:5
  |
6 |     move_state2(at::<'x>(t))
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

